<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    >

    <RelativeLayout
        android:id="@+id/heroimageBg"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/heroimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="151dp"
        android:layout_height="203dp"
        android:background="@drawable/logowhitetext"
        app:layout_constraintBottom_toBottomOf="@+id/heroimageBg"
        app:layout_constraintEnd_toEndOf="@+id/heroimageBg"
        app:layout_constraintStart_toStartOf="@+id/heroimageBg"
        app:layout_constraintTop_toTopOf="@+id/heroimageBg" />

    <TextView
        android:id="@+id/daftar"
        android:layout_width="wrap_content"
        android:fontFamily="@font/manrope_extrabold"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/daftar"
        android:textColor="#00273C"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroimageBg" />

    <TextView
        android:id="@+id/label_namalengkap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/manrope_medium"
        android:textColor="#101828"
        android:layout_marginTop="20dp"
        android:text="@string/nama_lengkap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daftar" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nama_lengkap"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_namalengkap"
         />

    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/manrope_medium"
        android:textColor="#101828"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/cth"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_email"
        />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/password"
        android:textColor="#101828"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:background="@drawable/edittext"
        android:hint="@string/cthpass"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cbSK"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        />

    <CheckBox
        android:id="@+id/cbSK"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:text="@string/cbSK"
        android:textSize="14sp"
        android:textColor="#667085"
        android:fontFamily="@font/manrope_regular"
        android:paddingStart="12dp"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_bold"
        android:hint="@string/register"
        android:textColorHint="@color/white"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:background="@drawable/buttonactive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSK"
        />

    <TextView
        android:id="@+id/sudah_punya_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_medium"
        android:textSize="14sp"
        android:text="@string/masuk_span"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>