<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/heroimageBg"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/heroimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="151dp"
        android:layout_height="203dp"
        android:background="@drawable/logowhitetext"
        app:layout_constraintBottom_toBottomOf="@+id/heroimageBg"
        app:layout_constraintEnd_toEndOf="@+id/heroimageBg"
        app:layout_constraintStart_toStartOf="@+id/heroimageBg"
        app:layout_constraintTop_toTopOf="@+id/heroimageBg" />

    <TextView
        android:id="@+id/masuk"
        android:layout_width="wrap_content"
        android:fontFamily="@font/manrope_extrabold"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/masuk"
        android:textColor="#00273C"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroimageBg" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:labelFor="@+id/EmailET"
        android:fontFamily="@font/manrope_medium"
        android:textColor="#101828"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/masuk" />

    <EditText
        android:id="@+id/EmailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEmail"
         />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#101828"
        android:labelFor="@+id/passwordET"
        android:fontFamily="@font/manrope_medium"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailET" />


    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:background="@drawable/edittext"
        android:drawableEnd="@drawable/eye_icon"
        android:inputType="textPassword"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnMasuk"
        app:layout_constraintTop_toBottomOf="@+id/password"
        />

    <Button
        android:id="@+id/btnMasuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_bold"
        android:hint="@string/masuk"
        android:textColorHint="@color/white"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:background="@drawable/buttonactive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordET"
        />

    <TextView
        android:id="@+id/atau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMasuk"
        android:text="@string/ataumasuk"
        android:layout_marginTop="16dp"
        />

    <LinearLayout
        android:id="@+id/LLbutton_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atau">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:backgroundTint="#F2F4F7"
            android:drawableLeft="@drawable/googlelogo"
            android:drawablePadding="14dp"
            android:hint="Google"
            android:padding="11dp"
            android:textColorHint="#364152"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/btnFacebook" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:backgroundTint="#3C5A9A"
            android:drawableLeft="@drawable/facebook_logo"
            android:hint="Facebook"
            android:drawablePadding="12dp"
            android:padding="11dp"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/btnGoogle" />

    </LinearLayout>

    <TextView
        android:id="@+id/belum_punya_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_medium"
        android:textSize="14sp"
        android:text="@string/daftar_span"
        app:layout_constraintTop_toBottomOf="@+id/LLbutton_signin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>